# Near-Instersect

./: 9_LAW_BINDING_LAYER.md  AUTONOMOUS_DEFENSE_ENGINE.md  ENFORCEMENT_MATRIX_TESTPLAN_v0.md  LAW_VALIDATION.md  LAW_v1_INVARIANTS.txt  LICENSE  MANDAT_INTEGRATION.md  MODULE_BINDINGS.md  Module 2: BurnCap  Module 5: VestingSchedule  Module 6: LiquidityBootstrap  Module 7: PercentageDistribution  OIM_INTERFACE.md  RAGTUFF_UPSTREAM_AUTHORITY.md  README.md.  Valued_USD_MarketSale.md  factory.rs  module_11_nrgo.rs  outreach message  truth_guard.rs
.github/workflows/: build-wasm.yml
contract/: Cargo.toml
contract/src/: factory.rs  lib.rs
docs/architecture/: ECONOMIC_STATE_MODEL.md
docs/doctrine/: ANTI_PRIVATE_CREDIT.md
profiles/: tide_v1.json
